--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.css
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.css
@@ -51,6 +51,21 @@
   .no-admins-message {
     color: #999;
   }
+
+  .past-reservation-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 10px;
+    }
+    
+    .reservation-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    width: 200px;
+    color: black;
+    }
   
 
   .equipment-container {
