--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
@@ -7,6 +7,13 @@
   padding: 30px;
 }
 
+.contractClass {
+  color: white;
+  background-color: #3498db;
+  border-radius: 15px;
+  width: 80px;
+}
+
 .company-container {
   border: 2px solid #3498db;
   align-items: center;
