--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.css
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.css
@@ -17,6 +17,20 @@
     width: 600px;
     
   }
+
+  .uploadQR{
+    justify-content: start;
+    width: 240px;
+    height: 70px;
+    margin-top: 20px;
+    margin-right: 150px;
+    padding: 10px;
+    font-size: medium;
+    font-weight: bold;
+    color: rgb(12, 73, 153);
+    border: 1px solid rgb(56, 91, 138);
+  }
+  
   
   .map-wrap {
     height: 400px;
@@ -55,8 +69,9 @@
   .past-reservation-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: start;
     margin-top: 10px;
+    margin-left: 20px;
     }
     
     .reservation-item {
