--- a/Explorer/src/app/feature-modules/user/company-admin-profile/company-admin-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/company-admin-profile/company-admin-profile.component.html
@@ -21,7 +21,7 @@
             <strong>Number:</strong> <span>{{ admin.number }}</span>
         </div>
         <div class="info-item">
-            <strong>Company:</strong> <span>{{ company.name }}</span>
+            <strong>Company:</strong> <span>{{ company?.name }}</span>
         </div>
 
         <div class="buttons">
