--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
@@ -94,7 +94,9 @@
               <p><strong>Grade:</strong> {{ res.grade }}</p>
               
               <!-- Display "Cancel Reservation" button only for past reservations -->
-              <button *ngIf="!res.isPast && res.isCancelEnabled && res.status != 'PickedUp' && res.status != 'Cancelled'" (click)="cancelReservation()">Give Equipment</button>
+              <button *ngIf="res.id !== undefined && res.isCancelEnabled && res.status != 'PickedUp' && res.status != 'Cancelled'" (click)="processThePickup(res.id)">
+                {{ res.isPast ?  'Penalize Customer' : 'Give Equipment' }}
+              </button>
               <p *ngIf="res.status == 'Cancelled'">Expired reservation!</p>
             </div>
           </div>
