--- a/Explorer/src/app/feature-modules/company/company-customers/company-customers.component.html
+++ b/Explorer/src/app/feature-modules/company/company-customers/company-customers.component.html
@@ -1,4 +1,5 @@
-
+<div class="customerTable">
+<h2> Customers:</h2>
 <table>
     <thead>
       <tr>
@@ -17,4 +18,4 @@
       </tr>
     </tbody>
 </table>
-  
+</div> 
