--- a/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       <button color="primary" *ngIf="customer || systemAdmin" mat-raised-button [routerLink]="['']">
         Home
       </button>
-      <button color="primary" *ngIf="companyAdmin" mat-raised-button [routerLink]="['companyAdminHome']">
+      <button color="primary" *ngIf="companyAdmin" mat-raised-button [routerLink]="['companyProfile']">
         Home
       </button>
       <button mat-raised-button *ngIf="customer" [routerLink]="['customerProfile']">
