--- a/Explorer/src/app/feature-modules/company/company-customers/company-customers.component.css
+++ b/Explorer/src/app/feature-modules/company/company-customers/company-customers.component.css
@@ -1,8 +1,16 @@
+.customerTable{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
 
 table {
-    width: 100%;
+    width: 500px;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 5px;
 }
   
 th, td {
