--- a/Explorer/src/app/feature-modules/loyality-program/define-loyality-program/define-loyality-program.component.css
+++ b/Explorer/src/app/feature-modules/loyality-program/define-loyality-program/define-loyality-program.component.css
@@ -63,10 +63,10 @@ form {
   }
 
   .form-container1 {
-    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-image: url('/assets/back2.jpg'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
     background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
-    width: 1950px;
-    height: 770px;
+    width: 100%;
+    height: 100vh;
     color: white; 
   }
   
