--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
@@ -181,10 +181,10 @@ background-color: rgb(4, 41, 89);
 }
 
 .form-container1 {
-  background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+  background-image: url('/assets/back2.jpg'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
   background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
-  width: 1900px;
-  height: 770px; /* Postavite visinu na 100% visine prozora */
+  width: 100%;
+  height: 100vh; /* Postavite visinu na 100% visine prozora */
   color: rgb(5, 29, 167); /* Postavite boju teksta kako biste bili vidljivi na slici */
   font-family: Arial, sans-serif; /* Postavite font teksta po potrebi */
 }
