--- a/Explorer/src/app/feature-modules/user/user-profile/user-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/user-profile/user-profile.component.css
@@ -149,8 +149,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  max-width: 400px; /* Adjust as needed */
   width: 100%;
+  height: 100vh;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -198,8 +198,8 @@
   }
 
   .form-container1 {
-    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-image: url('/assets/back2.jpg'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
     background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
-    width: 1950px;
-    height: 770px; 
+    width: 100%;
+    height: 100vh;
   }
