--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
@@ -184,7 +184,7 @@ background-color: rgb(4, 41, 89);
   background-image: url('/assets/back2.jpg'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
   background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
   width: 100%;
-  height: 100vh; /* Postavite visinu na 100% visine prozora */
+  height: fit-content; /* Postavite visinu na 100% visine prozora */
   color: rgb(5, 29, 167); /* Postavite boju teksta kako biste bili vidljivi na slici */
   font-family: Arial, sans-serif; /* Postavite font teksta po potrebi */
 }
