--- a/Explorer/src/app/feature-modules/company/add-availabledate-form/add-availabledate-form.component.html
+++ b/Explorer/src/app/feature-modules/company/add-availabledate-form/add-availabledate-form.component.html
@@ -3,12 +3,13 @@
   
     <div class="date-section">
       <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="selectedDate" name="selectedDate" ngDefaultControl>
+        <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="selectedDate" name="selectedDate" ngDefaultControl
+          [min]="minDate">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
     </div>
-  
+    
     <!--div class="time-section">
       <mat-form-field>
         <input matInput type="time" [(ngModel)]="selectedTime">
