--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
@@ -87,6 +87,7 @@
         <p><strong>⏰ Time: </strong>{{ formatDateAndTime(res.dateTime).time }}</p>
         <p><strong>Num of hours:</strong> {{ res.duration }}</p>
         <p><strong>Grade:</strong> {{ res.grade }}</p>
+        <p><strong>💰 Price:</strong> {{ res.price }}</p>
         
         <!-- Display "Cancel Reservation" button only for past reservations -->
         <button *ngIf="!res.isPast && res.isCancelEnabled && res.status != 'PickedUp' && res.status != 'Cancelled'" (click)="cancelReservation(res)">Cancel Reservation</button>
